fixed white space and font for buttons in safari

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -204,7 +204,6 @@
   height: 2.5rem;
   border-radius: 3rem;
   border: none;
-  font-family: "Montserrat", sans-serif;
   cursor: pointer;
 }
 .secondary-button{
